solr search integration
